fix(html): fix alignment on modals

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
   font-family: "DM Sans", sans-serif;
   margin: 0;
   max-width: 1440px;
-  text-align: center;
   margin: 0 auto;
 }
 
